sfdc/force-app/main/default/objects/Fulcrum_OEM__c/Fulcrum_OEM__c.object-meta.xml
<CustomObject>
    <description
  >OEM/Vendor master data for MarginArc margin intelligence</description>
    <label>MarginArc OEM</label>
    <nameField>
        <label>OEM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MarginArc OEMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>