sfdc/force-app/main/default/objects/Fulcrum_OEM__c/fields/Base_Margin__c.field-meta.xml
<CustomField>
    <fullName>Base_Margin__c</fullName>
    <description
  >Typical base margin percentage for this OEM vendor</description>
    <label>Base Margin %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>