sfdc/force-app/main/default/objects/Fulcrum_OEM__c/fields/Deal_Reg_Margin_Boost__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reg_Margin_Boost__c</fullName>
    <description>Additional margin when deal is registered</description>
    <label>Deal Reg Margin Boost %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>