sfdc/force-app/main/default/objects/Fulcrum_OEM__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <description>URL to OEM logo image</description>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>