sfdc/force-app/main/default/objects/Fulcrum_OEM__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Compute</fullName>
                <label>Compute / Servers</label>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
                <label>Cloud / SaaS</label>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>DataCenter</fullName>
                <label>Data Center Infrastructure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>