sfdc/force-app/main/default/objects/Fulcrum_OEM__c/fields/Quarter_End_Discount__c.field-meta.xml
<CustomField>
    <fullName>Quarter_End_Discount__c</fullName>
    <description>Typical discount available at quarter end</description>
    <label>Quarter End Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>