sfdc/force-app/main/default/objects/Fulcrum_OEM__c/fields/Services_Margin_Boost__c.field-meta.xml
<CustomField>
    <fullName>Services_Margin_Boost__c</fullName>
    <description>Additional margin when services are attached</description>
    <label>Services Margin Boost %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>